--- a/env.example
+++ b/env.example
@@ -3,15 +3,24 @@
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_firebase_api_key_here
-VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
+VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
-VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
+VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
+VITE_FIREBASE_APP_ID=1:123456789:web:abcdef123456
 
-# Gemini AI Configuration
+# Google Gemini AI API
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
+# ElevenLabs API for High-Quality Voice Features
+VITE_ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
+# Optional: Backend URL (if you want to use a backend later)
+# VITE_BACKEND_URL=http://localhost:5000
+
+# Optional: Watson AI (if you want to switch back later)
+# VITE_WATSON_API_KEY=your_watson_api_key_here
+# VITE_WATSON_URL=your_watson_url_here
 
 # Application Configuration
 VITE_APP_NAME=Samadhan AI
@@ -22,13 +31,6 @@ VITE_APP_ENVIRONMENT=development
 VITE_ENABLE_VOICE_CHAT=true
 VITE_ENABLE_SPEECH_SYNTHESIS=true
 VITE_ENABLE_FIREBASE_ANALYTICS=true
-
-# Optional: Backend URL (if you have a backend later)
-# VITE_BACKEND_URL=http://localhost:5000
-
-# Optional: External Services
-# VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
-# VITE_WEATHER_API_KEY=your_weather_api_key
 
 # Development Settings
 VITE_DEBUG_MODE=true
